--- a/css/style.css
+++ b/css/style.css
@@ -112,11 +112,13 @@ img {
     background: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(255, 101, 47, .2);
+    margin-top: 20px;
+
 }
 
 .dont::after, .dont::before {
     content: '';
-    /* position: absolute; */
+    position: absolute;
     width: 50px;
     height: 6px;
     border-radius: 5px;
@@ -125,7 +127,7 @@ img {
 }
 
 .dont::before {
-    transform: translateY(-16px);
+    transform: translateY(-25px);
 }
 
 .dont::before {
